[package]
name = "daebug"
version = "0.0.31"
edition = "2021"
description = "👾 Daebug Remote REPL - Rust + WASM implementation"
license = "MIT"
repository = "https://github.com/oyin-bo/daeb.ug"
homepage = "https://daeb.ug"

[lib]
name = "daebug"
path = "rust/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "daebug"
path = "rust/main.rs"
required-features = []

[dependencies]
# Core dependencies for all targets
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
markdown = "1.0.0-alpha.16"

# Native-only dependencies (not for WASM)
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
notify = { version = "6.1", optional = true }

[features]
default = ["native"]
native = ["tokio", "axum", "notify"]

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "WorkerGlobalScope"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
